[BUGFIX] Fix menu flickering

--- a/assets/css/darkmode.scss
+++ b/assets/css/darkmode.scss
@@ -10773,4 +10773,7 @@
     border: 1px solid #3788d8;
     background-color: #3788d8;
   }
+  .dropdown-menu{
+    top: 30px; /*Adjust this to around 33px */
+  }
 }
